[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Pairing threshold cryptography"
edition = "2021"
license = "GPL-3.0"
name = "blsttc"
readme = "README.md"
repository = "https://github.com/maidsafe/blsttc"
version = "4.0.0"

[dependencies]
blst = { version = "0.3.7", features = ["portable"] }
blstrs = { git = "https://github.com/dan-da/blstrs", branch = "blst_version_bump_pr" }
# ff = "0.11.0"
# group = "0.11.0"
ff = { git = "https://github.com/davidrusu/ff.git", branch="switch-to-subtle-ng"} # "0.11"
group = { git = "https://github.com/davidrusu/group.git", branch="switch-to-subtle-ng", features = ["tests"] } # version = "0.11", features = ["tests"] }
hex_fmt = "0.3.0"
# pairing = "0.21.0"
pairing = { git = "https://github.com/davidrusu/pairing", branch="switch-to-subtle-ng", package = "pairing"  } # { version = "0.21", package = "pairing" }

rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "1.0.22"
tiny-keccak = { version = "2.0.1", features = ["sha3"] }
zeroize = "1.3.0"

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.3.1"
eyre = "0.6.5"
hex = "0.4.3"
rand_core = "0.6.3"
rand_xorshift = "0.3.0"

[[bench]]
name = "bench"
harness = false
